@startuml BudgetCommand
title Budget Command Class
hide circle
hide stereotype
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho

class BusyBreak {
    + LINE : String
    + budgetPlan : BudgetPlan
    + list : List<Activity>
    + getStorage() : Storage
}


class BudgetPlan {
    +setBudget(amount : double) : void
    +addExpense(name : String, cost : String, category : String) : boolean
    +deleteExpense(index : int) : void
    +listExpenses() : void
    +setExpenseCategory(index : int, newCategory : String) : void
    +syncFromActivities(activities : List<Activity>) : void
    +isActivityCategory(category : String) : boolean
    +getTotalBudget() : double
}

class Storage {
    + saveBudgets() : void
    + loadBudgets() : void
}

class Activity {
    + name : String
    + cost : double
}

  class Budget {
    {static} +handleBudget(userInputArray : String[]) : void
  }


BusyBreak *-- BudgetPlan
BusyBreak *-- Storage
Budget --> BudgetPlan : uses
Budget --> Storage : saves/loads
BudgetPlan --> Activity : syncs with
@enduml